Update notes, credit

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -131,3 +131,14 @@ main.interactive {
     }
   }
 }
+
+.notes {
+  font-size: 16px;
+}
+
+.credit {
+  font-size: 16px;
+  text-align: right;
+  text-transform: uppercase;
+  font-style: italic;
+}
